// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the demo template > is as pinned (asset hashes aside) 1`] = `
"{
  "Parameters": {
    "GitHubClientId": {
      "Type": "String",
      "Description": "The GitHub OAuth app's client id",
      "MinLength": 1
    },
    "SignInLogins": {
      "Type": "String",
      "Default": "",
      "Description": "The GitHub logins that may sign in, comma separated (login or login:id); empty is nobody"
    },
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Resources": {
    "StorageTableB43FDCE7": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S"
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S"
          }
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "DeletionProtectionEnabled": true,
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH"
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE"
          }
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": true
        },
        "StreamSpecification": {
          "StreamViewType": "NEW_IMAGE"
        }
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "StorageFiles48C02C92": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced"
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "VersioningConfiguration": {
          "Status": "Enabled"
        }
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "StorageFilesPolicy836729C0": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "StorageFiles48C02C92"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "StorageFiles48C02C92",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "StorageFiles48C02C92",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "Null": {
                  "s3:if-none-match": "true"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "ApiLogsCD139AD4": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "ApiHandlerServiceRole6221F92E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "ApiHandlerServiceRoleDefaultPolicy72087A41": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:GetItem",
                "dynamodb:Query",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:ConditionCheckItem"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject",
                "s3:GetObjectTagging",
                "s3:PutObjectTagging"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/search/cards.json"
                  ]
                ]
              }
            },
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageFiles48C02C92",
                  "Arn"
                ]
              }
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/demo/github-oauth-secret"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/demo/origin-secret"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/demo/origin-secret-previous"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ApiHandlerServiceRoleDefaultPolicy72087A41",
        "Roles": [
          {
            "Ref": "ApiHandlerServiceRole6221F92E"
          }
        ]
      }
    },
    "ApiHandler8AD6A8DF": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            },
            "GITHUB_SECRET_PARAMETER": "/skills-catalog/demo/github-oauth-secret",
            "GITHUB_CLIENT_ID": {
              "Ref": "GitHubClientId"
            },
            "SIGN_IN_LOGINS": {
              "Ref": "SignInLogins"
            },
            "ORIGIN_SECRET_PARAMETER": "/skills-catalog/demo/origin-secret",
            "ORIGIN_SECRET_PREVIOUS_PARAMETER": "/skills-catalog/demo/origin-secret-previous"
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "ApiLogsCD139AD4"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "ApiHandlerServiceRole6221F92E",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "RuntimeManagementConfig": {
          "RuntimeVersionArn": "arn:aws:lambda:us-east-1::runtime:<asset>",
          "UpdateRuntimeOn": "Manual"
        },
        "Timeout": 29
      },
      "DependsOn": [
        "ApiHandlerServiceRoleDefaultPolicy72087A41",
        "ApiHandlerServiceRole6221F92E"
      ]
    },
    "ApiHttp17514DA7": {
      "Type": "AWS::ApiGatewayV2::Api",
      "Properties": {
        "Name": "Http",
        "ProtocolType": "HTTP"
      }
    },
    "ApiHttpDefaultRouteHandler295C6E0B": {
      "Type": "AWS::ApiGatewayV2::Integration",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "2.0"
      }
    },
    "ApiHttpDefaultRouteHandlerPermissionC21B00A1": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:111111111111:",
              {
                "Ref": "ApiHttp17514DA7"
              },
              "/*/*"
            ]
          ]
        }
      }
    },
    "ApiHttpDefaultRoute41824AB3": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AuthorizationType": "NONE",
        "RouteKey": "$default",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "ApiHttpDefaultRouteHandler295C6E0B"
              }
            ]
          ]
        }
      }
    },
    "ApiHttpPOSTapiv1signinwithgithubHandlerPermission4DC13E6B": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:111111111111:",
              {
                "Ref": "ApiHttp17514DA7"
              },
              "/*/*/api/v1/sign_in_with_github"
            ]
          ]
        }
      }
    },
    "ApiHttpPOSTapiv1signinwithgithubCD16183D": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AuthorizationType": "NONE",
        "RouteKey": "POST /api/v1/sign_in_with_github",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "ApiHttpDefaultRouteHandler295C6E0B"
              }
            ]
          ]
        }
      }
    },
    "ApiAccessLogs50B185DB": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "ApiStage4697DF29": {
      "Type": "AWS::ApiGatewayV2::Stage",
      "Properties": {
        "AccessLogSettings": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "ApiAccessLogs50B185DB",
              "Arn"
            ]
          },
          "Format": "$context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] \\"$context.httpMethod $context.resourcePath $context.protocol\\" $context.status $context.responseLength $context.requestId"
        },
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AutoDeploy": true,
        "DefaultRouteSettings": {
          "ThrottlingBurstLimit": 100,
          "ThrottlingRateLimit": 50
        },
        "RouteSettings": {
          "POST /api/v1/sign_in_with_github": {
            "ThrottlingRateLimit": 1,
            "ThrottlingBurstLimit": 5
          }
        },
        "StageName": "$default"
      }
    },
    "IndexerLogs8FF9DFD2": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "IndexerHandlerServiceRoleD76A58F9": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "IndexerHandlerServiceRoleDefaultPolicyF332A20D": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:GetItem",
                "dynamodb:Query",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/search/cards.json"
                  ]
                ]
              }
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "IndexerHandlerServiceRoleDefaultPolicyF332A20D",
        "Roles": [
          {
            "Ref": "IndexerHandlerServiceRoleD76A58F9"
          }
        ]
      }
    },
    "IndexerHandler44CE2D1A": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            }
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "IndexerLogs8FF9DFD2"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "IndexerHandlerServiceRoleD76A58F9",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "RuntimeManagementConfig": {
          "RuntimeVersionArn": "arn:aws:lambda:us-east-1::runtime:<asset>",
          "UpdateRuntimeOn": "Manual"
        },
        "Timeout": 60
      },
      "DependsOn": [
        "IndexerHandlerServiceRoleDefaultPolicyF332A20D",
        "IndexerHandlerServiceRoleD76A58F9"
      ]
    },
    "IndexerHandlerSqsEventSourceskillscatalogdemoEventsQueue02704B3A63D28382": {
      "Type": "AWS::Lambda::EventSourceMapping",
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "EventsQueue7396B467",
            "Arn"
          ]
        },
        "FunctionName": {
          "Ref": "IndexerHandler44CE2D1A"
        },
        "FunctionResponseTypes": [
          "ReportBatchItemFailures"
        ]
      }
    },
    "SweepLogsA7192123": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "SweepHandlerServiceRoleC223771A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "SweepHandlerServiceRoleDefaultPolicy3EADB2F8": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Scan",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:GetObjectTagging",
                "s3:PutObjectTagging"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:DeleteObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageFiles48C02C92",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "SweepHandlerServiceRoleDefaultPolicy3EADB2F8",
        "Roles": [
          {
            "Ref": "SweepHandlerServiceRoleC223771A"
          }
        ]
      }
    },
    "SweepHandler2ACAC680": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            }
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "SweepLogsA7192123"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SweepHandlerServiceRoleC223771A",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "RuntimeManagementConfig": {
          "RuntimeVersionArn": "arn:aws:lambda:us-east-1::runtime:<asset>",
          "UpdateRuntimeOn": "Manual"
        },
        "Timeout": 900
      },
      "DependsOn": [
        "SweepHandlerServiceRoleDefaultPolicy3EADB2F8",
        "SweepHandlerServiceRoleC223771A"
      ]
    },
    "SweepSchedule5ECAB4A7": {
      "Type": "AWS::Events::Rule",
      "Properties": {
        "ScheduleExpression": "rate(1 hour)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "SweepHandler2ACAC680",
                "Arn"
              ]
            },
            "Id": "Target0"
          }
        ]
      }
    },
    "SweepScheduleAllowEventRuleskillscatalogdemoSweepHandler2C8DF7DDD991F09A": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "SweepHandler2ACAC680",
            "Arn"
          ]
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "SweepSchedule5ECAB4A7",
            "Arn"
          ]
        }
      }
    },
    "EventsDeadLetters8A90034E": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "FifoQueue": true,
        "MessageRetentionPeriod": 1209600,
        "SqsManagedSseEnabled": true
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "EventsDeadLettersPolicyA65B37F0": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::GetAtt": [
                  "EventsDeadLetters8A90034E",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Queues": [
          {
            "Ref": "EventsDeadLetters8A90034E"
          }
        ]
      }
    },
    "EventsQueue7396B467": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "FifoQueue": true,
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "EventsDeadLetters8A90034E",
              "Arn"
            ]
          },
          "maxReceiveCount": 5
        },
        "SqsManagedSseEnabled": true,
        "VisibilityTimeout": 360
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "EventsQueuePolicy58834349": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Queues": [
          {
            "Ref": "EventsQueue7396B467"
          }
        ]
      }
    },
    "EventsPipeRole3A464140": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "pipes.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "EventsPipeRoleDefaultPolicyB7E451DE": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:DescribeStream",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:ListStreams"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "StreamArn"
                ]
              }
            },
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "EventsPipeRoleDefaultPolicyB7E451DE",
        "Roles": [
          {
            "Ref": "EventsPipeRole3A464140"
          }
        ]
      }
    },
    "EventsPipe11815F2B": {
      "Type": "AWS::Pipes::Pipe",
      "Properties": {
        "RoleArn": {
          "Fn::GetAtt": [
            "EventsPipeRole3A464140",
            "Arn"
          ]
        },
        "Source": {
          "Fn::GetAtt": [
            "StorageTableB43FDCE7",
            "StreamArn"
          ]
        },
        "SourceParameters": {
          "DynamoDBStreamParameters": {
            "BatchSize": 1,
            "StartingPosition": "TRIM_HORIZON"
          },
          "FilterCriteria": {
            "Filters": [
              {
                "Pattern": "{\\"eventName\\":[\\"INSERT\\"],\\"dynamodb\\":{\\"Keys\\":{\\"pk\\":{\\"S\\":[\\"events\\"]}}}}"
              }
            ]
          }
        },
        "Target": {
          "Fn::GetAtt": [
            "EventsQueue7396B467",
            "Arn"
          ]
        },
        "TargetParameters": {
          "SqsQueueParameters": {
            "MessageDeduplicationId": "$.eventID",
            "MessageGroupId": "catalog"
          }
        }
      }
    },
    "SitePages600CC8A7": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced"
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        }
      },
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain"
    },
    "SitePagesPolicy2C8FC158": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "SitePages600CC8A7"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SitePages600CC8A7",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SitePages600CC8A7",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition"
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId"
                        },
                        ":distribution/",
                        {
                          "Ref": "SiteEdge06AD6D73"
                        }
                      ]
                    ]
                  }
                }
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com"
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "SitePages600CC8A7",
                        "Arn"
                      ]
                    },
                    "/*"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "SiteFirewallB06E926C": {
      "Type": "AWS::WAFv2::WebACL",
      "Properties": {
        "DefaultAction": {
          "Allow": {}
        },
        "Rules": [
          {
            "Name": "AWSManagedRulesCommonRuleSet",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 1,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesCommonRuleSet",
                "RuleActionOverrides": [
                  {
                    "ActionToUse": {
                      "Count": {}
                    },
                    "Name": "SizeRestrictions_BODY"
                  }
                ],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesCommonRuleSet",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Name": "AWSManagedRulesKnownBadInputsRuleSet",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 2,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesKnownBadInputsRuleSet",
                "RuleActionOverrides": [],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesKnownBadInputsRuleSet",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Name": "AWSManagedRulesAmazonIpReputationList",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 3,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesAmazonIpReputationList",
                "RuleActionOverrides": [],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesAmazonIpReputationList",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Action": {
              "Block": {}
            },
            "Name": "RatePerAddress",
            "Priority": 4,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "Limit": 2000
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "RatePerAddress",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Action": {
              "Block": {}
            },
            "Name": "SignInPerAddress",
            "Priority": 5,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "EvaluationWindowSec": 60,
                "Limit": 10,
                "ScopeDownStatement": {
                  "ByteMatchStatement": {
                    "FieldToMatch": {
                      "UriPath": {}
                    },
                    "PositionalConstraint": "EXACTLY",
                    "SearchString": "/api/v1/sign_in_with_github",
                    "TextTransformations": [
                      {
                        "Priority": 0,
                        "Type": "NONE"
                      }
                    ]
                  }
                }
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "SignInPerAddress",
              "SampledRequestsEnabled": true
            }
          }
        ],
        "Scope": "CLOUDFRONT",
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "skills-catalog",
          "SampledRequestsEnabled": true
        }
      }
    },
    "SiteDeepLinks2F0B6669": {
      "Type": "AWS::CloudFront::Function",
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {\\n  var request = event.request;\\n  var last = request.uri.split('/').pop();\\n  if (request.uri !== '/' && !/\\\\.[A-Za-z0-9]+$/.test(last)) request.uri = '/index.html';\\n  return request;\\n}",
        "FunctionConfig": {
          "Comment": "us-east-1skillscatalogdemoSiteDeepLinks9487623B",
          "Runtime": "cloudfront-js-2.0"
        },
        "Name": "us-east-1skillscatalogdemoSiteDeepLinks9487623B"
      }
    },
    "SitePageHeaders72ECD105": {
      "Type": "AWS::CloudFront::Function",
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {\\n  var response = event.response;\\n  var add = {\\"content-security-policy\\":{\\"value\\":\\"default-src 'none'; script-src 'self'; style-src 'self'; img-src 'self'; connect-src 'self'; base-uri 'none'; form-action 'none'; frame-ancestors 'none'\\"},\\"x-content-type-options\\":{\\"value\\":\\"nosniff\\"},\\"referrer-policy\\":{\\"value\\":\\"no-referrer\\"},\\"cross-origin-opener-policy\\":{\\"value\\":\\"same-origin\\"},\\"cross-origin-resource-policy\\":{\\"value\\":\\"same-origin\\"}};\\n  for (var name in add) response.headers[name] = add[name];\\n  return response;\\n}",
        "FunctionConfig": {
          "Comment": "us-east-1skillscatalogdemoSitePageHeaders9999242F",
          "Runtime": "cloudfront-js-2.0"
        },
        "Name": "us-east-1skillscatalogdemoSitePageHeaders9999242F"
      }
    },
    "SiteEdgeOrigin1S3OriginAccessControl07F632D2": {
      "Type": "AWS::CloudFront::OriginAccessControl",
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "skillscatalogdemoSiteEdgeOrigin1S3OriginAccessControlD652B1F2",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4"
        }
      }
    },
    "SiteEdge06AD6D73": {
      "Type": "AWS::CloudFront::Distribution",
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE"
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
              "TargetOriginId": "skillscatalogdemoSiteEdgeOrigin2483598EF",
              "ViewerProtocolPolicy": "redirect-to-https"
            }
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "FunctionAssociations": [
              {
                "EventType": "viewer-request",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SiteDeepLinks2F0B6669",
                    "FunctionARN"
                  ]
                }
              },
              {
                "EventType": "viewer-response",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SitePageHeaders72ECD105",
                    "FunctionARN"
                  ]
                }
              }
            ],
            "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
            "TargetOriginId": "skillscatalogdemoSiteEdgeOrigin1EDC78DB4",
            "ViewerProtocolPolicy": "redirect-to-https"
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "SitePages600CC8A7",
                  "RegionalDomainName"
                ]
              },
              "Id": "skillscatalogdemoSiteEdgeOrigin1EDC78DB4",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "SiteEdgeOrigin1S3OriginAccessControl07F632D2",
                  "Id"
                ]
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": ""
              }
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2"
                ]
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::GetAtt": [
                          "ApiHttp17514DA7",
                          "ApiEndpoint"
                        ]
                      }
                    ]
                  }
                ]
              },
              "Id": "skillscatalogdemoSiteEdgeOrigin2483598EF",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "x-skills-catalog-origin",
                  "HeaderValue": "{{resolve:ssm:/skills-catalog/demo/origin-secret:1}}"
                }
              ]
            }
          ],
          "WebACLId": {
            "Fn::GetAtt": [
              "SiteFirewallB06E926C",
              "Arn"
            ]
          }
        }
      }
    },
    "GuardrailsAlerts103A0879": {
      "Type": "AWS::SNS::Topic"
    },
    "GuardrailsAlertsPolicy25DD199A": {
      "Type": "AWS::SNS::TopicPolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": {
                "Ref": "GuardrailsAlerts103A0879"
              },
              "Sid": "AllowPublishThroughSSLOnly"
            },
            {
              "Action": "sns:Publish",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": "111111111111"
                }
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "budgets.amazonaws.com"
              },
              "Resource": {
                "Ref": "GuardrailsAlerts103A0879"
              },
              "Sid": "1"
            }
          ],
          "Version": "2012-10-17"
        },
        "Topics": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ]
      }
    },
    "GuardrailsLostEvents615CCE8C": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ],
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "EventsDeadLetters8A90034E",
                "QueueName"
              ]
            }
          }
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching"
      }
    },
    "GuardrailsPipeFailuresBB4190EB": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ],
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "PipeName",
            "Value": {
              "Ref": "EventsPipe11815F2B"
            }
          }
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionFailed",
        "Namespace": "AWS/EventBridge/Pipes",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching"
      }
    },
    "GuardrailsBudget97E755BD": {
      "Type": "AWS::Budgets::Budget",
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 10,
            "Unit": "USD"
          },
          "BudgetType": "COST",
          "TimeUnit": "MONTHLY"
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE"
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "GuardrailsAlerts103A0879"
                },
                "SubscriptionType": "SNS"
              }
            ]
          }
        ]
      }
    },
    "GuardrailsFreePlan2F8E13FC": {
      "Type": "AWS::PricingPlanManager::Subscription",
      "Properties": {
        "PlanFamily": "CloudFront",
        "PlanTier": "FREE",
        "ResourceArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":cloudfront::111111111111:distribution/",
                {
                  "Ref": "SiteEdge06AD6D73"
                }
              ]
            ]
          },
          {
            "Fn::GetAtt": [
              "SiteFirewallB06E926C",
              "Arn"
            ]
          }
        ],
        "UsageLevel": "DEFAULT"
      }
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}"
`;

exports[`the throwaway template > is as pinned (asset hashes aside) 1`] = `
"{
  "Parameters": {
    "GitHubClientId": {
      "Type": "String",
      "Description": "The GitHub OAuth app's client id",
      "MinLength": 1
    },
    "SignInLogins": {
      "Type": "String",
      "Default": "",
      "Description": "The GitHub logins that may sign in, comma separated (login or login:id); empty is nobody"
    },
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Resources": {
    "StorageTableB43FDCE7": {
      "Type": "AWS::DynamoDB::Table",
      "Properties": {
        "AttributeDefinitions": [
          {
            "AttributeName": "pk",
            "AttributeType": "S"
          },
          {
            "AttributeName": "sk",
            "AttributeType": "S"
          }
        ],
        "BillingMode": "PAY_PER_REQUEST",
        "DeletionProtectionEnabled": false,
        "KeySchema": [
          {
            "AttributeName": "pk",
            "KeyType": "HASH"
          },
          {
            "AttributeName": "sk",
            "KeyType": "RANGE"
          }
        ],
        "PointInTimeRecoverySpecification": {
          "PointInTimeRecoveryEnabled": false
        },
        "StreamSpecification": {
          "StreamViewType": "NEW_IMAGE"
        }
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "StorageFiles48C02C92": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced"
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true"
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "StorageFilesPolicy836729C0": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "StorageFiles48C02C92"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "StorageFiles48C02C92",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "StorageFiles48C02C92",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*"
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn"
                  ]
                }
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "StorageFiles48C02C92",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "StorageFiles48C02C92",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "Null": {
                  "s3:if-none-match": "true"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "StorageFilesAutoDeleteObjectsCustomResource70EDF14A": {
      "Type": "Custom::S3AutoDeleteObjects",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn"
          ]
        },
        "BucketName": {
          "Ref": "StorageFiles48C02C92"
        }
      },
      "DependsOn": [
        "StorageFilesPolicy836729C0"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ]
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
          }
        ]
      }
    },
    "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Timeout": 900,
        "MemorySize": 128,
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "Description": {
          "Fn::Join": [
            "",
            [
              "Lambda function for auto-deleting objects in ",
              {
                "Ref": "StorageFiles48C02C92"
              },
              " S3 bucket."
            ]
          ]
        }
      },
      "DependsOn": [
        "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092"
      ]
    },
    "ApiLogsCD139AD4": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "ApiHandlerServiceRole6221F92E": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "ApiHandlerServiceRoleDefaultPolicy72087A41": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:GetItem",
                "dynamodb:Query",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem",
                "dynamodb:ConditionCheckItem"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject",
                "s3:GetObjectTagging",
                "s3:PutObjectTagging"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:GetObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/search/cards.json"
                  ]
                ]
              }
            },
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageFiles48C02C92",
                  "Arn"
                ]
              }
            },
            {
              "Action": "ssm:GetParameter",
              "Effect": "Allow",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/throwaway/github-oauth-secret"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/throwaway/origin-secret"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":ssm:us-east-1:111111111111:parameter/skills-catalog/throwaway/origin-secret-previous"
                    ]
                  ]
                }
              ]
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "ApiHandlerServiceRoleDefaultPolicy72087A41",
        "Roles": [
          {
            "Ref": "ApiHandlerServiceRole6221F92E"
          }
        ]
      }
    },
    "ApiHandler8AD6A8DF": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            },
            "GITHUB_SECRET_PARAMETER": "/skills-catalog/throwaway/github-oauth-secret",
            "GITHUB_CLIENT_ID": {
              "Ref": "GitHubClientId"
            },
            "SIGN_IN_LOGINS": {
              "Ref": "SignInLogins"
            },
            "ORIGIN_SECRET_PARAMETER": "/skills-catalog/throwaway/origin-secret",
            "ORIGIN_SECRET_PREVIOUS_PARAMETER": "/skills-catalog/throwaway/origin-secret-previous"
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "ApiLogsCD139AD4"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "ApiHandlerServiceRole6221F92E",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "Timeout": 29
      },
      "DependsOn": [
        "ApiHandlerServiceRoleDefaultPolicy72087A41",
        "ApiHandlerServiceRole6221F92E"
      ]
    },
    "ApiHttp17514DA7": {
      "Type": "AWS::ApiGatewayV2::Api",
      "Properties": {
        "Name": "Http",
        "ProtocolType": "HTTP"
      }
    },
    "ApiHttpDefaultRouteHandler295C6E0B": {
      "Type": "AWS::ApiGatewayV2::Integration",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "IntegrationType": "AWS_PROXY",
        "IntegrationUri": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "PayloadFormatVersion": "2.0"
      }
    },
    "ApiHttpDefaultRouteHandlerPermissionC21B00A1": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:111111111111:",
              {
                "Ref": "ApiHttp17514DA7"
              },
              "/*/*"
            ]
          ]
        }
      }
    },
    "ApiHttpDefaultRoute41824AB3": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AuthorizationType": "NONE",
        "RouteKey": "$default",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "ApiHttpDefaultRouteHandler295C6E0B"
              }
            ]
          ]
        }
      }
    },
    "ApiHttpPOSTapiv1signinwithgithubHandlerPermission4DC13E6B": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "ApiHandler8AD6A8DF",
            "Arn"
          ]
        },
        "Principal": "apigateway.amazonaws.com",
        "SourceArn": {
          "Fn::Join": [
            "",
            [
              "arn:",
              {
                "Ref": "AWS::Partition"
              },
              ":execute-api:us-east-1:111111111111:",
              {
                "Ref": "ApiHttp17514DA7"
              },
              "/*/*/api/v1/sign_in_with_github"
            ]
          ]
        }
      }
    },
    "ApiHttpPOSTapiv1signinwithgithubCD16183D": {
      "Type": "AWS::ApiGatewayV2::Route",
      "Properties": {
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AuthorizationType": "NONE",
        "RouteKey": "POST /api/v1/sign_in_with_github",
        "Target": {
          "Fn::Join": [
            "",
            [
              "integrations/",
              {
                "Ref": "ApiHttpDefaultRouteHandler295C6E0B"
              }
            ]
          ]
        }
      }
    },
    "ApiAccessLogs50B185DB": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "ApiStage4697DF29": {
      "Type": "AWS::ApiGatewayV2::Stage",
      "Properties": {
        "AccessLogSettings": {
          "DestinationArn": {
            "Fn::GetAtt": [
              "ApiAccessLogs50B185DB",
              "Arn"
            ]
          },
          "Format": "$context.identity.sourceIp $context.identity.caller $context.identity.user [$context.requestTime] \\"$context.httpMethod $context.resourcePath $context.protocol\\" $context.status $context.responseLength $context.requestId"
        },
        "ApiId": {
          "Ref": "ApiHttp17514DA7"
        },
        "AutoDeploy": true,
        "DefaultRouteSettings": {
          "ThrottlingBurstLimit": 40,
          "ThrottlingRateLimit": 20
        },
        "RouteSettings": {
          "POST /api/v1/sign_in_with_github": {
            "ThrottlingRateLimit": 1,
            "ThrottlingBurstLimit": 5
          }
        },
        "StageName": "$default"
      }
    },
    "IndexerLogs8FF9DFD2": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "IndexerHandlerServiceRoleD76A58F9": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "IndexerHandlerServiceRoleDefaultPolicyF332A20D": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:GetItem",
                "dynamodb:Query",
                "dynamodb:PutItem",
                "dynamodb:UpdateItem"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:PutObject"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/search/cards.json"
                  ]
                ]
              }
            },
            {
              "Action": [
                "sqs:ReceiveMessage",
                "sqs:ChangeMessageVisibility",
                "sqs:GetQueueUrl",
                "sqs:DeleteMessage",
                "sqs:GetQueueAttributes"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "IndexerHandlerServiceRoleDefaultPolicyF332A20D",
        "Roles": [
          {
            "Ref": "IndexerHandlerServiceRoleD76A58F9"
          }
        ]
      }
    },
    "IndexerHandler44CE2D1A": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            }
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "IndexerLogs8FF9DFD2"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "IndexerHandlerServiceRoleD76A58F9",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "Timeout": 60
      },
      "DependsOn": [
        "IndexerHandlerServiceRoleDefaultPolicyF332A20D",
        "IndexerHandlerServiceRoleD76A58F9"
      ]
    },
    "IndexerHandlerSqsEventSourceskillscatalogthrowawayEventsQueue25350972A5A259B7": {
      "Type": "AWS::Lambda::EventSourceMapping",
      "Properties": {
        "BatchSize": 1,
        "EventSourceArn": {
          "Fn::GetAtt": [
            "EventsQueue7396B467",
            "Arn"
          ]
        },
        "FunctionName": {
          "Ref": "IndexerHandler44CE2D1A"
        },
        "FunctionResponseTypes": [
          "ReportBatchItemFailures"
        ]
      }
    },
    "SweepLogsA7192123": {
      "Type": "AWS::Logs::LogGroup",
      "Properties": {
        "RetentionInDays": 30
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "SweepHandlerServiceRoleC223771A": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition"
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
              ]
            ]
          }
        ]
      }
    },
    "SweepHandlerServiceRoleDefaultPolicy3EADB2F8": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "dynamodb:Scan",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "Arn"
                ]
              }
            },
            {
              "Action": [
                "s3:GetObject",
                "s3:GetObjectTagging",
                "s3:PutObjectTagging"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:DeleteObject",
              "Effect": "Allow",
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "StorageFiles48C02C92",
                        "Arn"
                      ]
                    },
                    "/blobs/*"
                  ]
                ]
              }
            },
            {
              "Action": "s3:ListBucket",
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageFiles48C02C92",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "SweepHandlerServiceRoleDefaultPolicy3EADB2F8",
        "Roles": [
          {
            "Ref": "SweepHandlerServiceRoleC223771A"
          }
        ]
      }
    },
    "SweepHandler2ACAC680": {
      "Type": "AWS::Lambda::Function",
      "Properties": {
        "Architectures": [
          "arm64"
        ],
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-111111111111-us-east-1",
          "S3Key": "<asset>"
        },
        "Environment": {
          "Variables": {
            "CATALOG_TABLE": {
              "Ref": "StorageTableB43FDCE7"
            },
            "CATALOG_BUCKET": {
              "Ref": "StorageFiles48C02C92"
            }
          }
        },
        "Handler": "index.handler",
        "LoggingConfig": {
          "LogGroup": {
            "Ref": "SweepLogsA7192123"
          }
        },
        "MemorySize": 1024,
        "Role": {
          "Fn::GetAtt": [
            "SweepHandlerServiceRoleC223771A",
            "Arn"
          ]
        },
        "Runtime": "nodejs24.x",
        "Timeout": 900
      },
      "DependsOn": [
        "SweepHandlerServiceRoleDefaultPolicy3EADB2F8",
        "SweepHandlerServiceRoleC223771A"
      ]
    },
    "SweepSchedule5ECAB4A7": {
      "Type": "AWS::Events::Rule",
      "Properties": {
        "ScheduleExpression": "rate(1 hour)",
        "State": "ENABLED",
        "Targets": [
          {
            "Arn": {
              "Fn::GetAtt": [
                "SweepHandler2ACAC680",
                "Arn"
              ]
            },
            "Id": "Target0"
          }
        ]
      }
    },
    "SweepScheduleAllowEventRuleskillscatalogthrowawaySweepHandler36224429383AEADE": {
      "Type": "AWS::Lambda::Permission",
      "Properties": {
        "Action": "lambda:InvokeFunction",
        "FunctionName": {
          "Fn::GetAtt": [
            "SweepHandler2ACAC680",
            "Arn"
          ]
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": {
          "Fn::GetAtt": [
            "SweepSchedule5ECAB4A7",
            "Arn"
          ]
        }
      }
    },
    "EventsDeadLetters8A90034E": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "FifoQueue": true,
        "MessageRetentionPeriod": 1209600,
        "SqsManagedSseEnabled": true
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "EventsDeadLettersPolicyA65B37F0": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::GetAtt": [
                  "EventsDeadLetters8A90034E",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Queues": [
          {
            "Ref": "EventsDeadLetters8A90034E"
          }
        ]
      }
    },
    "EventsQueue7396B467": {
      "Type": "AWS::SQS::Queue",
      "Properties": {
        "FifoQueue": true,
        "RedrivePolicy": {
          "deadLetterTargetArn": {
            "Fn::GetAtt": [
              "EventsDeadLetters8A90034E",
              "Arn"
            ]
          },
          "maxReceiveCount": 5
        },
        "SqsManagedSseEnabled": true,
        "VisibilityTimeout": 360
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "EventsQueuePolicy58834349": {
      "Type": "AWS::SQS::QueuePolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sqs:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Queues": [
          {
            "Ref": "EventsQueue7396B467"
          }
        ]
      }
    },
    "EventsPipeRole3A464140": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "pipes.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "EventsPipeRoleDefaultPolicyB7E451DE": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "dynamodb:DescribeStream",
                "dynamodb:GetRecords",
                "dynamodb:GetShardIterator",
                "dynamodb:ListStreams"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "StorageTableB43FDCE7",
                  "StreamArn"
                ]
              }
            },
            {
              "Action": [
                "sqs:SendMessage",
                "sqs:GetQueueAttributes",
                "sqs:GetQueueUrl"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "EventsQueue7396B467",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "EventsPipeRoleDefaultPolicyB7E451DE",
        "Roles": [
          {
            "Ref": "EventsPipeRole3A464140"
          }
        ]
      }
    },
    "EventsPipe11815F2B": {
      "Type": "AWS::Pipes::Pipe",
      "Properties": {
        "RoleArn": {
          "Fn::GetAtt": [
            "EventsPipeRole3A464140",
            "Arn"
          ]
        },
        "Source": {
          "Fn::GetAtt": [
            "StorageTableB43FDCE7",
            "StreamArn"
          ]
        },
        "SourceParameters": {
          "DynamoDBStreamParameters": {
            "BatchSize": 1,
            "StartingPosition": "TRIM_HORIZON"
          },
          "FilterCriteria": {
            "Filters": [
              {
                "Pattern": "{\\"eventName\\":[\\"INSERT\\"],\\"dynamodb\\":{\\"Keys\\":{\\"pk\\":{\\"S\\":[\\"events\\"]}}}}"
              }
            ]
          }
        },
        "Target": {
          "Fn::GetAtt": [
            "EventsQueue7396B467",
            "Arn"
          ]
        },
        "TargetParameters": {
          "SqsQueueParameters": {
            "MessageDeduplicationId": "$.eventID",
            "MessageGroupId": "catalog"
          }
        }
      }
    },
    "SitePages600CC8A7": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        },
        "OwnershipControls": {
          "Rules": [
            {
              "ObjectOwnership": "BucketOwnerEnforced"
            }
          ]
        },
        "PublicAccessBlockConfiguration": {
          "BlockPublicAcls": true,
          "BlockPublicPolicy": true,
          "IgnorePublicAcls": true,
          "RestrictPublicBuckets": true
        },
        "Tags": [
          {
            "Key": "aws-cdk:auto-delete-objects",
            "Value": "true"
          }
        ]
      },
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "SitePagesPolicy2C8FC158": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "SitePages600CC8A7"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": {
                "AWS": "*"
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SitePages600CC8A7",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SitePages600CC8A7",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": [
                "s3:PutBucketPolicy",
                "s3:GetBucket*",
                "s3:List*",
                "s3:DeleteObject*"
              ],
              "Effect": "Allow",
              "Principal": {
                "AWS": {
                  "Fn::GetAtt": [
                    "CustomS3AutoDeleteObjectsCustomResourceProviderRole3B1BD092",
                    "Arn"
                  ]
                }
              },
              "Resource": [
                {
                  "Fn::GetAtt": [
                    "SitePages600CC8A7",
                    "Arn"
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      {
                        "Fn::GetAtt": [
                          "SitePages600CC8A7",
                          "Arn"
                        ]
                      },
                      "/*"
                    ]
                  ]
                }
              ]
            },
            {
              "Action": "s3:GetObject",
              "Condition": {
                "StringEquals": {
                  "AWS:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition"
                        },
                        ":cloudfront::",
                        {
                          "Ref": "AWS::AccountId"
                        },
                        ":distribution/",
                        {
                          "Ref": "SiteEdge06AD6D73"
                        }
                      ]
                    ]
                  }
                }
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "cloudfront.amazonaws.com"
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "SitePages600CC8A7",
                        "Arn"
                      ]
                    },
                    "/*"
                  ]
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        }
      }
    },
    "SitePagesAutoDeleteObjectsCustomResource6D1360DE": {
      "Type": "Custom::S3AutoDeleteObjects",
      "Properties": {
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomS3AutoDeleteObjectsCustomResourceProviderHandler9D90184F",
            "Arn"
          ]
        },
        "BucketName": {
          "Ref": "SitePages600CC8A7"
        }
      },
      "DependsOn": [
        "SitePagesPolicy2C8FC158"
      ],
      "UpdateReplacePolicy": "Delete",
      "DeletionPolicy": "Delete"
    },
    "SiteFirewallB06E926C": {
      "Type": "AWS::WAFv2::WebACL",
      "Properties": {
        "DefaultAction": {
          "Allow": {}
        },
        "Rules": [
          {
            "Name": "AWSManagedRulesCommonRuleSet",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 1,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesCommonRuleSet",
                "RuleActionOverrides": [
                  {
                    "ActionToUse": {
                      "Count": {}
                    },
                    "Name": "SizeRestrictions_BODY"
                  }
                ],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesCommonRuleSet",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Name": "AWSManagedRulesKnownBadInputsRuleSet",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 2,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesKnownBadInputsRuleSet",
                "RuleActionOverrides": [],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesKnownBadInputsRuleSet",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Name": "AWSManagedRulesAmazonIpReputationList",
            "OverrideAction": {
              "None": {}
            },
            "Priority": 3,
            "Statement": {
              "ManagedRuleGroupStatement": {
                "Name": "AWSManagedRulesAmazonIpReputationList",
                "RuleActionOverrides": [],
                "VendorName": "AWS"
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "AWSManagedRulesAmazonIpReputationList",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Action": {
              "Block": {}
            },
            "Name": "RatePerAddress",
            "Priority": 4,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "Limit": 1000
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "RatePerAddress",
              "SampledRequestsEnabled": true
            }
          },
          {
            "Action": {
              "Block": {}
            },
            "Name": "SignInPerAddress",
            "Priority": 5,
            "Statement": {
              "RateBasedStatement": {
                "AggregateKeyType": "IP",
                "EvaluationWindowSec": 60,
                "Limit": 10,
                "ScopeDownStatement": {
                  "ByteMatchStatement": {
                    "FieldToMatch": {
                      "UriPath": {}
                    },
                    "PositionalConstraint": "EXACTLY",
                    "SearchString": "/api/v1/sign_in_with_github",
                    "TextTransformations": [
                      {
                        "Priority": 0,
                        "Type": "NONE"
                      }
                    ]
                  }
                }
              }
            },
            "VisibilityConfig": {
              "CloudWatchMetricsEnabled": true,
              "MetricName": "SignInPerAddress",
              "SampledRequestsEnabled": true
            }
          }
        ],
        "Scope": "CLOUDFRONT",
        "VisibilityConfig": {
          "CloudWatchMetricsEnabled": true,
          "MetricName": "skills-catalog",
          "SampledRequestsEnabled": true
        }
      }
    },
    "SiteDeepLinks2F0B6669": {
      "Type": "AWS::CloudFront::Function",
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {\\n  var request = event.request;\\n  var last = request.uri.split('/').pop();\\n  if (request.uri !== '/' && !/\\\\.[A-Za-z0-9]+$/.test(last)) request.uri = '/index.html';\\n  return request;\\n}",
        "FunctionConfig": {
          "Comment": "us-east-1skills-catalog-twaySiteDeepLinks20311DE8",
          "Runtime": "cloudfront-js-2.0"
        },
        "Name": "us-east-1skills-catalog-twaySiteDeepLinks20311DE8"
      }
    },
    "SitePageHeaders72ECD105": {
      "Type": "AWS::CloudFront::Function",
      "Properties": {
        "AutoPublish": true,
        "FunctionCode": "function handler(event) {\\n  var response = event.response;\\n  var add = {\\"content-security-policy\\":{\\"value\\":\\"default-src 'none'; script-src 'self'; style-src 'self'; img-src 'self'; connect-src 'self'; base-uri 'none'; form-action 'none'; frame-ancestors 'none'\\"},\\"x-content-type-options\\":{\\"value\\":\\"nosniff\\"},\\"referrer-policy\\":{\\"value\\":\\"no-referrer\\"},\\"cross-origin-opener-policy\\":{\\"value\\":\\"same-origin\\"},\\"cross-origin-resource-policy\\":{\\"value\\":\\"same-origin\\"}};\\n  for (var name in add) response.headers[name] = add[name];\\n  return response;\\n}",
        "FunctionConfig": {
          "Comment": "us-east-1skills-catalog-tySitePageHeaders91D5DB79",
          "Runtime": "cloudfront-js-2.0"
        },
        "Name": "us-east-1skills-catalog-tySitePageHeaders91D5DB79"
      }
    },
    "SiteEdgeOrigin1S3OriginAccessControl07F632D2": {
      "Type": "AWS::CloudFront::OriginAccessControl",
      "Properties": {
        "OriginAccessControlConfig": {
          "Name": "skillscatalogthrowawaySiteEdOrigin1S3OriginAccessControlA7DC0B98",
          "OriginAccessControlOriginType": "s3",
          "SigningBehavior": "always",
          "SigningProtocol": "sigv4"
        }
      }
    },
    "SiteEdge06AD6D73": {
      "Type": "AWS::CloudFront::Distribution",
      "Properties": {
        "DistributionConfig": {
          "CacheBehaviors": [
            {
              "AllowedMethods": [
                "GET",
                "HEAD",
                "OPTIONS",
                "PUT",
                "PATCH",
                "POST",
                "DELETE"
              ],
              "CachePolicyId": "4135ea2d-6df8-44a3-9df3-4b5a84be39ad",
              "Compress": true,
              "OriginRequestPolicyId": "b689b0a8-53d0-40ab-baf2-68738e2966ac",
              "PathPattern": "/api/*",
              "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
              "TargetOriginId": "skillscatalogthrowawaySiteEdgeOrigin255A1245F",
              "ViewerProtocolPolicy": "redirect-to-https"
            }
          ],
          "DefaultCacheBehavior": {
            "CachePolicyId": "658327ea-f89d-4fab-a63d-7e88639e58f6",
            "Compress": true,
            "FunctionAssociations": [
              {
                "EventType": "viewer-request",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SiteDeepLinks2F0B6669",
                    "FunctionARN"
                  ]
                }
              },
              {
                "EventType": "viewer-response",
                "FunctionARN": {
                  "Fn::GetAtt": [
                    "SitePageHeaders72ECD105",
                    "FunctionARN"
                  ]
                }
              }
            ],
            "ResponseHeadersPolicyId": "67f7725c-6f97-4210-82d7-5512b31e9d03",
            "TargetOriginId": "skillscatalogthrowawaySiteEdgeOrigin101FA8CE2",
            "ViewerProtocolPolicy": "redirect-to-https"
          },
          "DefaultRootObject": "index.html",
          "Enabled": true,
          "HttpVersion": "http2",
          "IPV6Enabled": true,
          "Origins": [
            {
              "DomainName": {
                "Fn::GetAtt": [
                  "SitePages600CC8A7",
                  "RegionalDomainName"
                ]
              },
              "Id": "skillscatalogthrowawaySiteEdgeOrigin101FA8CE2",
              "OriginAccessControlId": {
                "Fn::GetAtt": [
                  "SiteEdgeOrigin1S3OriginAccessControl07F632D2",
                  "Id"
                ]
              },
              "S3OriginConfig": {
                "OriginAccessIdentity": ""
              }
            },
            {
              "CustomOriginConfig": {
                "OriginProtocolPolicy": "https-only",
                "OriginSSLProtocols": [
                  "TLSv1.2"
                ]
              },
              "DomainName": {
                "Fn::Select": [
                  2,
                  {
                    "Fn::Split": [
                      "/",
                      {
                        "Fn::GetAtt": [
                          "ApiHttp17514DA7",
                          "ApiEndpoint"
                        ]
                      }
                    ]
                  }
                ]
              },
              "Id": "skillscatalogthrowawaySiteEdgeOrigin255A1245F",
              "OriginCustomHeaders": [
                {
                  "HeaderName": "x-skills-catalog-origin",
                  "HeaderValue": "{{resolve:ssm:/skills-catalog/throwaway/origin-secret:1}}"
                }
              ]
            }
          ],
          "WebACLId": {
            "Fn::GetAtt": [
              "SiteFirewallB06E926C",
              "Arn"
            ]
          }
        }
      }
    },
    "GuardrailsAlerts103A0879": {
      "Type": "AWS::SNS::Topic"
    },
    "GuardrailsAlertsPolicy25DD199A": {
      "Type": "AWS::SNS::TopicPolicy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "sns:Publish",
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": "false"
                }
              },
              "Effect": "Deny",
              "Principal": "*",
              "Resource": {
                "Ref": "GuardrailsAlerts103A0879"
              },
              "Sid": "AllowPublishThroughSSLOnly"
            },
            {
              "Action": "sns:Publish",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": "111111111111"
                }
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "budgets.amazonaws.com"
              },
              "Resource": {
                "Ref": "GuardrailsAlerts103A0879"
              },
              "Sid": "1"
            }
          ],
          "Version": "2012-10-17"
        },
        "Topics": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ]
      }
    },
    "GuardrailsLostEvents615CCE8C": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ],
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "QueueName",
            "Value": {
              "Fn::GetAtt": [
                "EventsDeadLetters8A90034E",
                "QueueName"
              ]
            }
          }
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ApproximateNumberOfMessagesVisible",
        "Namespace": "AWS/SQS",
        "Period": 300,
        "Statistic": "Maximum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching"
      }
    },
    "GuardrailsPipeFailuresBB4190EB": {
      "Type": "AWS::CloudWatch::Alarm",
      "Properties": {
        "AlarmActions": [
          {
            "Ref": "GuardrailsAlerts103A0879"
          }
        ],
        "ComparisonOperator": "GreaterThanThreshold",
        "Dimensions": [
          {
            "Name": "PipeName",
            "Value": {
              "Ref": "EventsPipe11815F2B"
            }
          }
        ],
        "EvaluationPeriods": 1,
        "MetricName": "ExecutionFailed",
        "Namespace": "AWS/EventBridge/Pipes",
        "Period": 300,
        "Statistic": "Sum",
        "Threshold": 0,
        "TreatMissingData": "notBreaching"
      }
    },
    "GuardrailsBudget97E755BD": {
      "Type": "AWS::Budgets::Budget",
      "Properties": {
        "Budget": {
          "BudgetLimit": {
            "Amount": 5,
            "Unit": "USD"
          },
          "BudgetType": "COST",
          "TimeUnit": "MONTHLY"
        },
        "NotificationsWithSubscribers": [
          {
            "Notification": {
              "ComparisonOperator": "GREATER_THAN",
              "NotificationType": "ACTUAL",
              "Threshold": 80,
              "ThresholdType": "PERCENTAGE"
            },
            "Subscribers": [
              {
                "Address": {
                  "Ref": "GuardrailsAlerts103A0879"
                },
                "SubscriptionType": "SNS"
              }
            ]
          }
        ]
      }
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}"
`;
